--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,36 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.character-select{
+  display: flex;
+  flex-direction: column;
 
+}
+
+.mainChoices{
+  padding: 15px 60px;
+  cursor: pointer;
+  margin:0px 0px 5px 10px;
+  background: transparent;
+  font-size: 30px;
+  border:none;
+  font-family: "Rowdies", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.mainChoices:hover{
+  font-size: 35px;
+  font-weight: 800;
+  font-style: italic;
+  
+}
 .start-button:hover {
   background-color: #45a049;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(10, 1fr); /* 10 columns */
+  grid-template-columns: repeat(5, 1fr); /* 10 columns */
   grid-template-rows: repeat(2, auto); /* 2 rows */
   gap: 20px;
   padding: 20px;
@@ -55,4 +77,29 @@
   width: 100px;
   height: 100px;
   object-fit: cover;
+}
+.fight-screen{
+  display: grid;
+}
+.nextAndPrevious {
+  padding:10px 10px;
+  width: 150px;
+  border-color: #FFD700; /* Replace $yellow with the color value */
+  color: #0c0b0b;
+  font-size: 20px;
+  background-image: linear-gradient(45deg, #FFD700 50%, transparent 50%);
+  background-position: 100%;
+  background-size: 400%;
+  transition: background 300ms ease-in-out;
+  border-radius: 15px;
+}
+
+.nextAndPrevious:hover {
+  background-position: 0;
+}
+.selected-pokemon {
+  background-color: yellow;
+  border: 3px solid rgb(0, 0, 0);
+
+  transition: all 0.3s ease-in-out; 
 }
